# Full-Auth

./: pyproject.toml
backend/: pyproject.toml
backend/core/: settings.py
backend/users/: import pytest.py  models.py  tests.py  urls.py
backend/users/migrations/: 0001_initial.py
core/: settings.py
frontend/: .prettierrc  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/activation/[uid]/[token]/: page.tsx
frontend/app/auth/facebook/: page.tsx
frontend/app/auth/google/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/password-reset/: page.tsx
frontend/app/password-reset/[uid]/[token]/: page.tsx
frontend/components/common/: Footer.tsx  List.tsx  NavLink.tsx  Navbar.tsx  index.ts
frontend/components/forms/: Form.tsx  Input.tsx  LoginForm.tsx  PasswordResetConfirmForm.tsx  index.ts
frontend/components/utils/: RequireAuth.tsx
frontend/forms/: RegisterForm.tsx
frontend/hooks/: index.ts  use-register.ts  use-verify.ts
frontend/redux/: provider.tsx  store.ts
frontend/redux/features/: authApiSlice.ts  authSlice.ts
frontend/redux/services/: ApiSlice.ts
frontend/web-app/full-auth/: package.json
users/: authentication.py  tests.py  views.py
